--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
     "react-native-maps": "^0.22.0",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
